eks/1-vpc.tf
resource "aws_vpc" "main"  {
    cidr_block = var.vpc_cidr_range 

    tags = {
        Name = var.vpc_name
    }
}
